--- a/expert-style.css
+++ b/expert-style.css
@@ -15,6 +15,17 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Tajawal', sans-serif;
+    -webkit-tap-highlight-color: transparent;
+}
+
+body {
+    user-select: none;
+}
+
+input,
+textarea,
+select {
+    user-select: text;
 }
 
 body {
